# books_recommender

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
data/artifacts/: recommender_system.pkl
src/books_recommender/: config.py  evaluation.py  pipeline.py
src/books_recommender/data/: load.py  preprocess.py
src/books_recommender/models/: knn.py
