[project]
name = "books-recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "Kostia9",email = "danilov.k11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "books-recommender"
packages = [{ include = "books_recommender", from = "src" }]
